<resources>
    <string name="app_name">ToDoApp</string>
    <string name="main_title">Мои дела</string>
    <string name="sub_title">Выполнено -&#160;</string>
    <string name="visible">Visible</string>
    <string name="not_visible">Not visible</string>
    <string name="network">Nerwork</string>
    <string name="save">Сохранить</string>
    <string name="importance">Важность</string>
    <string name="what_todo">Что надо сделать...</string>
    <string name="deadline_title">Сделать до</string>
    <string name="delete">Удалить</string>
    <string name="delete_title">Удалено дело:&#160;</string>
    <string name="cancel">Отмена</string>
    <string name="no_internet">Нет подключения к Интернету</string>
    <string name="request_sent">Запрос на обновление данных отправлен</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_title">Настройки</string>
    <string name="theme_selection">Выбор темы</string>
    <string name="light_theme_selection">Всегда светлая</string>
    <string name="dark_theme_selection">Всегда тёмная</string>
    <string name="system_theme_selection">Как в системе</string>
    <string name="common_menu">&#160;Нет</string>
    <string name="low_menu">↓ Низкая</string>
    <string name="high_menu"><font color='#FF3B30'>&#160;&#160;!&#160;&#160;Высокая</font></string>
    <string name="common">Нет</string>
    <string name="low">↓ Низкая</string>
    <string name="high">! Высокая</string>
    <string-array name="importance_array">
        <item>Нет</item>
        <item>↓ Низкая</item>
        <item><font color='#FF3B30'>&#160;&#160;!&#160;&#160;Высокая</font></item>
    </string-array>
</resources>