<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppBackground"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        style="@style/TextColor"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme_selection"
        android:textSize="18sp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <RadioButton
            android:id="@+id/radioLightTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_theme_selection"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radioDarkTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme_selection"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radioSystemTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_theme_selection"
            android:textSize="16sp"/>
    </RadioGroup>

</LinearLayout>
